SF_CodeBase/objects/talkdesk__Talkdesk_Syncing_Custom_Object__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>talkdesk__Lookup_Field_API_Name__c</fullName>
        <description>API Name of lookup field which was added to Talkdesk Activity Object</description>
        <label>Lookup Field API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Lookup_Field_Label__c</fullName>
        <label>Lookup Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>talkdesk__Syncing_Object_API_Name__c</fullName>
        <description>API Name of Object which could be click-to-dialed</description>
        <label>Syncing Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Talkdesk Syncing Custom Object</label>
</CustomObject>